--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -2,11 +2,12 @@
   "name": "0x00-ES6_basic",
   "version": "1.0.0",
   "description": "this is for javascript backend",
-  "main": "0-constants.js",
+  "main": "1-block-scoped.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node 0-main.js"
+    "dev1": "node 0-main.js",
+    "dev2": "node 1-main.js",
   },
   "keywords": [],
   "author": "",
