--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev1": "node 0-main.js",
     "dev2": "node 1-main.js",
+    "dev": "npm run dev1 && npm run dev2"  
   },
   "keywords": [],
   "author": "",
