--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node 0-main.js"
+    "dev": "node 0-main.js",
+    "dev1": "node 1-main.js"
   },
   "keywords": [],
   "author": "",
