takes a promise and return a strig if a promise was passed susscuffly

--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node 0-main.js",
-    "dev1": "node 1-main.js"
+    "dev1": "node 1-main.js",
+    "dev2": "node 2-main.js"
   },
   "keywords": [],
   "author": "",
