--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node 0-main.js",
     "dev1": "node 1-main.js",
-    "dev2": "node 2-main.js"
+    "dev2": "node 2-main.js",
+    "dev3": "node 4-main.js"
   },
   "keywords": [],
   "author": "",
