reject the promises

--- a/0x01-ES6_promise/package.json
+++ b/0x01-ES6_promise/package.json
@@ -9,7 +9,8 @@
     "dev": "node 0-main.js",
     "dev1": "node 1-main.js",
     "dev2": "node 2-main.js",
-    "dev3": "node 4-main.js"
+    "dev3": "node 4-main.js",
+    "dev4": "node 5-main.js"
   },
   "keywords": [],
   "author": "",
